// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TranscriptWidget component snapshots snapshot: renders ErrorAlert with delete error message 1`] = `
<CollapsibleFormWidget
  isError={true}
  subtitle="English"
  title="Transcripts"
>
  <ErrorAlert
    dismissError={null}
    hideHeading={true}
    isError={false}
  >
    <FormattedMessage
      defaultMessage="Failed to upload transcript. Please try again."
      description="Message presented to user when transcript fails to upload"
      id="authoring.videoeditor.transcript.error.uploadTranscriptError"
    />
  </ErrorAlert>
  <ErrorAlert
    dismissError={null}
    hideHeading={true}
    isError={true}
  >
    <FormattedMessage
      defaultMessage="Failed to delete transcript. Please try again."
      description="Message presented to user when transcript fails to delete"
      id="authoring.videoeditor.transcript.error.deleteTranscriptError"
    />
  </ErrorAlert>
  <Stack
    gap={3}
  >
    <Form.Group
      className="mt-4.5"
    >
      <Transcript
        index={0}
        language="en"
      />
      <ActionRow
        className="mt-4 mb-1"
      >
        <Form.Checkbox
          checked={false}
          className="decorative-control-label"
          onChange={[Function]}
        >
          <Form.Label>
            <FormattedMessage
              defaultMessage="Allow transcript downloads"
              description="Label for allow transcript downloads checkbox"
              id="authoring.videoeditor.transcripts.allowDownloadCheckboxLabel"
            />
          </Form.Label>
        </Form.Checkbox>
        <IconButtonWithTooltip
          alt="Learners will see a link to download the transcript below the video."
          iconAs="Icon"
          key="top"
          tooltipContent="Learners will see a link to download the transcript below the video."
          tooltipPlacement="top"
        />
        <ActionRow.Spacer />
      </ActionRow>
      <Form.Checkbox
        checked={false}
        className="mt-4.5 decorative-control-label"
        onChange={[Function]}
      >
        <Form.Label
          size="sm"
        >
          <FormattedMessage
            defaultMessage="Show transcript in the video player by default"
            description="Label for show by default checkbox"
            id="authoring.videoeditor.transcripts.upload.showByDefaultCheckboxLabel"
          />
        </Form.Label>
      </Form.Checkbox>
    </Form.Group>
    <Stack
      className="border-primary-100 border-top"
      gap={3}
    >
      <Button
        onClick={[Function]}
        variant="link"
      >
        <FormattedMessage
          defaultMessage="Add a transcript"
          description="Label for upload button"
          id="authoring.videoeditor.transcripts.upload.label"
        />
      </Button>
    </Stack>
  </Stack>
</CollapsibleFormWidget>
`;

exports[`TranscriptWidget component snapshots snapshot: renders ErrorAlert with upload error message 1`] = `
<CollapsibleFormWidget
  isError={true}
  subtitle="English, French"
  title="Transcripts"
>
  <ErrorAlert
    dismissError={null}
    hideHeading={true}
    isError={true}
  >
    <FormattedMessage
      defaultMessage="Failed to upload transcript. Please try again."
      description="Message presented to user when transcript fails to upload"
      id="authoring.videoeditor.transcript.error.uploadTranscriptError"
    />
  </ErrorAlert>
  <ErrorAlert
    dismissError={null}
    hideHeading={true}
    isError={false}
  >
    <FormattedMessage
      defaultMessage="Failed to delete transcript. Please try again."
      description="Message presented to user when transcript fails to delete"
      id="authoring.videoeditor.transcript.error.deleteTranscriptError"
    />
  </ErrorAlert>
  <Stack
    gap={3}
  >
    <Form.Group
      className="mt-4.5"
    >
      <Transcript
        index={0}
        language="en"
      />
      <Transcript
        index={1}
        language="fr"
      />
      <ActionRow
        className="mt-4 mb-1"
      >
        <Form.Checkbox
          checked={false}
          className="decorative-control-label"
          onChange={[Function]}
        >
          <Form.Label>
            <FormattedMessage
              defaultMessage="Allow transcript downloads"
              description="Label for allow transcript downloads checkbox"
              id="authoring.videoeditor.transcripts.allowDownloadCheckboxLabel"
            />
          </Form.Label>
        </Form.Checkbox>
        <IconButtonWithTooltip
          alt="Learners will see a link to download the transcript below the video."
          iconAs="Icon"
          key="top"
          tooltipContent="Learners will see a link to download the transcript below the video."
          tooltipPlacement="top"
        />
        <ActionRow.Spacer />
      </ActionRow>
      <Form.Checkbox
        checked={false}
        className="mt-4.5 decorative-control-label"
        onChange={[Function]}
      >
        <Form.Label
          size="sm"
        >
          <FormattedMessage
            defaultMessage="Show transcript in the video player by default"
            description="Label for show by default checkbox"
            id="authoring.videoeditor.transcripts.upload.showByDefaultCheckboxLabel"
          />
        </Form.Label>
      </Form.Checkbox>
    </Form.Group>
    <Stack
      className="border-primary-100 border-top"
      gap={3}
    >
      <Button
        onClick={[Function]}
        variant="link"
      >
        <FormattedMessage
          defaultMessage="Add a transcript"
          description="Label for upload button"
          id="authoring.videoeditor.transcripts.upload.label"
        />
      </Button>
    </Stack>
  </Stack>
</CollapsibleFormWidget>
`;

exports[`TranscriptWidget component snapshots snapshots: renders as expected with allowTranscriptDownloads true 1`] = `
<CollapsibleFormWidget
  isError={true}
  subtitle="English"
  title="Transcripts"
>
  <ErrorAlert
    dismissError={null}
    hideHeading={true}
    isError={false}
  >
    <FormattedMessage
      defaultMessage="Failed to upload transcript. Please try again."
      description="Message presented to user when transcript fails to upload"
      id="authoring.videoeditor.transcript.error.uploadTranscriptError"
    />
  </ErrorAlert>
  <ErrorAlert
    dismissError={null}
    hideHeading={true}
    isError={false}
  >
    <FormattedMessage
      defaultMessage="Failed to delete transcript. Please try again."
      description="Message presented to user when transcript fails to delete"
      id="authoring.videoeditor.transcript.error.deleteTranscriptError"
    />
  </ErrorAlert>
  <Stack
    gap={3}
  >
    <Form.Group
      className="mt-4.5"
    >
      <Transcript
        index={0}
        language="en"
      />
      <ActionRow
        className="mt-4 mb-1"
      >
        <Form.Checkbox
          checked={true}
          className="decorative-control-label"
          onChange={[Function]}
        >
          <Form.Label>
            <FormattedMessage
              defaultMessage="Allow transcript downloads"
              description="Label for allow transcript downloads checkbox"
              id="authoring.videoeditor.transcripts.allowDownloadCheckboxLabel"
            />
          </Form.Label>
        </Form.Checkbox>
        <IconButtonWithTooltip
          alt="Learners will see a link to download the transcript below the video."
          iconAs="Icon"
          key="top"
          tooltipContent="Learners will see a link to download the transcript below the video."
          tooltipPlacement="top"
        />
        <ActionRow.Spacer />
      </ActionRow>
      <Form.Checkbox
        checked={false}
        className="mt-4.5 decorative-control-label"
        onChange={[Function]}
      >
        <Form.Label
          size="sm"
        >
          <FormattedMessage
            defaultMessage="Show transcript in the video player by default"
            description="Label for show by default checkbox"
            id="authoring.videoeditor.transcripts.upload.showByDefaultCheckboxLabel"
          />
        </Form.Label>
      </Form.Checkbox>
    </Form.Group>
    <Stack
      className="border-primary-100 border-top"
      gap={3}
    >
      <Button
        onClick={[Function]}
        variant="link"
      >
        <FormattedMessage
          defaultMessage="Add a transcript"
          description="Label for upload button"
          id="authoring.videoeditor.transcripts.upload.label"
        />
      </Button>
    </Stack>
  </Stack>
</CollapsibleFormWidget>
`;

exports[`TranscriptWidget component snapshots snapshots: renders as expected with default props 1`] = `
<CollapsibleFormWidget
  isError={true}
  subtitle="None"
  title="Transcripts"
>
  <ErrorAlert
    dismissError={null}
    hideHeading={true}
    isError={false}
  >
    <FormattedMessage
      defaultMessage="Failed to upload transcript. Please try again."
      description="Message presented to user when transcript fails to upload"
      id="authoring.videoeditor.transcript.error.uploadTranscriptError"
    />
  </ErrorAlert>
  <ErrorAlert
    dismissError={null}
    hideHeading={true}
    isError={false}
  >
    <FormattedMessage
      defaultMessage="Failed to delete transcript. Please try again."
      description="Message presented to user when transcript fails to delete"
      id="authoring.videoeditor.transcript.error.deleteTranscriptError"
    />
  </ErrorAlert>
  <Stack
    gap={3}
  >
    <Alert
      variant="danger"
    >
      <FormattedMessage
        defaultMessage="Only SRT files can be uploaded. Please select a file ending in .srt to upload."
        description="Message warning users to only upload .srt files"
        id="authoring.videoeditor.transcripts.fileTypeWarning"
      />
    </Alert>
    <FormattedMessage
      defaultMessage="Add video transcripts for improved accessibility."
      description="Message for adding first transcript"
      id="authoring.videoeditor.transcripts.upload.firstTranscriptMessage"
    />
    <Stack
      className="border-primary-100 border-top"
      gap={3}
    >
      <Button
        onClick={[Function]}
        variant="link"
      >
        <FormattedMessage
          defaultMessage="Add a transcript"
          description="Label for upload button"
          id="authoring.videoeditor.transcripts.upload.label"
        />
      </Button>
    </Stack>
  </Stack>
</CollapsibleFormWidget>
`;

exports[`TranscriptWidget component snapshots snapshots: renders as expected with showTranscriptByDefault true 1`] = `
<CollapsibleFormWidget
  isError={true}
  subtitle="English"
  title="Transcripts"
>
  <ErrorAlert
    dismissError={null}
    hideHeading={true}
    isError={false}
  >
    <FormattedMessage
      defaultMessage="Failed to upload transcript. Please try again."
      description="Message presented to user when transcript fails to upload"
      id="authoring.videoeditor.transcript.error.uploadTranscriptError"
    />
  </ErrorAlert>
  <ErrorAlert
    dismissError={null}
    hideHeading={true}
    isError={false}
  >
    <FormattedMessage
      defaultMessage="Failed to delete transcript. Please try again."
      description="Message presented to user when transcript fails to delete"
      id="authoring.videoeditor.transcript.error.deleteTranscriptError"
    />
  </ErrorAlert>
  <Stack
    gap={3}
  >
    <Form.Group
      className="mt-4.5"
    >
      <Transcript
        index={0}
        language="en"
      />
      <ActionRow
        className="mt-4 mb-1"
      >
        <Form.Checkbox
          checked={false}
          className="decorative-control-label"
          onChange={[Function]}
        >
          <Form.Label>
            <FormattedMessage
              defaultMessage="Allow transcript downloads"
              description="Label for allow transcript downloads checkbox"
              id="authoring.videoeditor.transcripts.allowDownloadCheckboxLabel"
            />
          </Form.Label>
        </Form.Checkbox>
        <IconButtonWithTooltip
          alt="Learners will see a link to download the transcript below the video."
          iconAs="Icon"
          key="top"
          tooltipContent="Learners will see a link to download the transcript below the video."
          tooltipPlacement="top"
        />
        <ActionRow.Spacer />
      </ActionRow>
      <Form.Checkbox
        checked={true}
        className="mt-4.5 decorative-control-label"
        onChange={[Function]}
      >
        <Form.Label
          size="sm"
        >
          <FormattedMessage
            defaultMessage="Show transcript in the video player by default"
            description="Label for show by default checkbox"
            id="authoring.videoeditor.transcripts.upload.showByDefaultCheckboxLabel"
          />
        </Form.Label>
      </Form.Checkbox>
    </Form.Group>
    <Stack
      className="border-primary-100 border-top"
      gap={3}
    >
      <Button
        onClick={[Function]}
        variant="link"
      >
        <FormattedMessage
          defaultMessage="Add a transcript"
          description="Label for upload button"
          id="authoring.videoeditor.transcripts.upload.label"
        />
      </Button>
    </Stack>
  </Stack>
</CollapsibleFormWidget>
`;

exports[`TranscriptWidget component snapshots snapshots: renders as expected with transcripts 1`] = `
<CollapsibleFormWidget
  isError={true}
  subtitle="English"
  title="Transcripts"
>
  <ErrorAlert
    dismissError={null}
    hideHeading={true}
    isError={false}
  >
    <FormattedMessage
      defaultMessage="Failed to upload transcript. Please try again."
      description="Message presented to user when transcript fails to upload"
      id="authoring.videoeditor.transcript.error.uploadTranscriptError"
    />
  </ErrorAlert>
  <ErrorAlert
    dismissError={null}
    hideHeading={true}
    isError={false}
  >
    <FormattedMessage
      defaultMessage="Failed to delete transcript. Please try again."
      description="Message presented to user when transcript fails to delete"
      id="authoring.videoeditor.transcript.error.deleteTranscriptError"
    />
  </ErrorAlert>
  <Stack
    gap={3}
  >
    <Form.Group
      className="mt-4.5"
    >
      <Transcript
        index={0}
        language="en"
      />
      <ActionRow
        className="mt-4 mb-1"
      >
        <Form.Checkbox
          checked={false}
          className="decorative-control-label"
          onChange={[Function]}
        >
          <Form.Label>
            <FormattedMessage
              defaultMessage="Allow transcript downloads"
              description="Label for allow transcript downloads checkbox"
              id="authoring.videoeditor.transcripts.allowDownloadCheckboxLabel"
            />
          </Form.Label>
        </Form.Checkbox>
        <IconButtonWithTooltip
          alt="Learners will see a link to download the transcript below the video."
          iconAs="Icon"
          key="top"
          tooltipContent="Learners will see a link to download the transcript below the video."
          tooltipPlacement="top"
        />
        <ActionRow.Spacer />
      </ActionRow>
      <Form.Checkbox
        checked={false}
        className="mt-4.5 decorative-control-label"
        onChange={[Function]}
      >
        <Form.Label
          size="sm"
        >
          <FormattedMessage
            defaultMessage="Show transcript in the video player by default"
            description="Label for show by default checkbox"
            id="authoring.videoeditor.transcripts.upload.showByDefaultCheckboxLabel"
          />
        </Form.Label>
      </Form.Checkbox>
    </Form.Group>
    <Stack
      className="border-primary-100 border-top"
      gap={3}
    >
      <Button
        onClick={[Function]}
        variant="link"
      >
        <FormattedMessage
          defaultMessage="Add a transcript"
          description="Label for upload button"
          id="authoring.videoeditor.transcripts.upload.label"
        />
      </Button>
    </Stack>
  </Stack>
</CollapsibleFormWidget>
`;
